# ProjectManagerCore

./: CMakeLists.txt  project_manager_test.cpp
include/: Operation.hpp  Project.hpp  ProjectManagerCore.hpp
include/model/: Project.hpp
src/: Operation.cpp  ProjectManagerCore.cpp
